<resources>
    <string name="app_name">Library Manager</string>
    <string name="nav_home">Home</string>
    <string name="nav_add">Add</string>
    <string name="nav_stats">Stats</string>
    <string name="nav_log_out">Log Out</string>
    <string name="nav_user_name">User Name</string>
    <string name="nav_email_id">email@id.com</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_profile_picture_description">Profile Picture</string>
    <string name="sign_out_failed_message">Oops something went wrong while signing out. Please try again.</string>
    <string name="no_network_alert_message">No Network. Please ensure Wifi or Mobile-Data is enabled and try again.</string>
    <string name="provider_alert_message">Oops something went wrong with your sign in provider please try using another one.</string>
    <string name="email_mismatch_alert_message">Email mismatch error. Please try using another email.</string>
    <string name="unknown_error_alert_message">Oops something went wrong please try again.</string>
    <string name="app_label">Library Manager</string>
    <string name="search_hint">Search for books</string>
    <string name="cover_photo_description">Cover photo of the book.</string>
    <string name="place_holder_text">Place holder</string>
    <string name="book_name_hint">Book Name</string>
    <string name="author_name_hint">Author</string>
    <string name="price_hint">Price</string>
    <string name="category_hint">Category</string>
    <string name="select_cover_image_title">Select a Cover</string>
    <string name="NULL" />
    <string name="add_button_text">Add</string>
    <string name="book_popup_rupee_sign">₹ %1$s</string>
    <string name="loading_text">Loading…</string>
    <string name="adding_text">Adding…</string>
    <string name="saving_text">Saving…</string>
    <string name="channel_name">notification_channel_944</string>
    <string name="channel_description">The notification channel for Library-Manager.</string>
    <string name="extracting_text_notification_message">Please fill out price and category information while the Name and Author are being extracted from the image.</string>
    <string name="add_cover_image_button_text">Select Cover Image</string>
    <string name="no_network_message">Your device is not connected to any network. Please turn on Wifi or mobile data and try again.</string>
    <string name="no_internet_message">Your network dose not have internet access , please try switching to another network.</string>
    <string name="error_checking_network">Error while checking internet access , please try restarting the app.</string>
    <string name="error_message">Oops something went wrong.</string>
    <string name="stats_categories">Categories</string>
    <string name="stats_books">Books</string>
    <string name="stats_authors">Authors</string>
    <string name="stats_users">Users</string>
    <string name="camera_view_auto_crop_text">Auto Crop</string>
    <string name="camera_view_book_label">Book</string>
    <string name="failed_to_save_book">Failed to save the book.</string>
    <string name="book_pop_up_edit_button_text">Edit</string>
    <string name="book_pop_up_delete_button_text">Delete</string>
    <string name="delete_prompt">"Are you sure you want to delete this Book ?"</string>
    <string name="edit_button_text">Save</string>
    <string name="failed_algolia_delete">Unable to delete Book from search.</string>
    <string name="book_delete_success">Book successfully deleted!</string>
    <string name="book_delete_failed">Unable to delete Book</string>
    <string name="algolia_application_id">D77D99DE4O</string>
    <string name="algolia_api_key">453424a3ad3532f4d5c3fb1ad2584695</string>
    <string name="algolia_index">book_shelf</string>
    <string name="common_error">Oops something went wrong.</string>
    <string name="camera_permission_denied">Can\'t capture photo PERMISSION DENIED</string>
    <string name="no_name_error">Please enter a name.</string>
    <string name="no_author">Author\'s name can\'t be empty.</string>
    <string name="no_category">Please enter a category</string>
    <string name="photo_upload_failed">Failed to upload cover photo</string>
    <string name="book_added">Added</string>
    <string name="failed_to_add_book">Failed to add book.</string>
    <string name="text_copied_from_image">Copied</string>
    <string name="book_saved">Saved</string>
    <string name="no_search_result">No Results Found</string>
</resources>
