<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add"
            android:title="@string/nav_add" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_stats"
            android:title="@string/nav_stats" />
    </group>
    <item
        android:id="@+id/logOut"
        android:icon="@drawable/ic_log_out"
        android:title="@string/nav_log_out" />

</menu>