<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical">

        <HorizontalScrollView
            android:id="@+id/stats_cards_scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:overScrollMode="always"
            android:padding="0dp"
            android:scrollbarThumbHorizontal="@color/transparent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:gravity="fill_horizontal"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="#D32F2F">

                    <ImageView
                        android:id="@+id/category_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/stats_categories"
                        android:foregroundGravity="center"
                        android:paddingTop="10dp"
                        android:src="@drawable/ic_stats_category" />

                    <TextView
                        android:id="@+id/category_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/category_image"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/category_count"
                        android:gravity="center"
                        android:text="@string/stats_categories"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="#D81B60">

                    <ImageView
                        android:id="@+id/book_count_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/stats_books"
                        android:foregroundGravity="center"
                        android:paddingTop="10dp"
                        android:src="@drawable/ic_stats_book" />

                    <TextView
                        android:id="@+id/book_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/book_count_image"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/book_count"
                        android:gravity="center"
                        android:text="@string/stats_books"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="#9C27B0">

                    <ImageView
                        android:id="@+id/author_count_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/stats_authors"
                        android:foregroundGravity="center"
                        android:paddingTop="10dp"
                        android:src="@drawable/ic_stats_author" />

                    <TextView
                        android:id="@+id/author_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/author_count_image"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/author_count"
                        android:gravity="center"
                        android:text="@string/stats_authors"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="#F57C00">

                    <ImageView
                        android:id="@+id/user_count_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/stats_users"
                        android:foregroundGravity="center"
                        android:paddingTop="10dp"
                        android:src="@drawable/ic_stats_user" />

                    <TextView
                        android:id="@+id/user_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/user_count_image"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/user_count"
                        android:gravity="center"
                        android:text="@string/stats_users"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/common_google_signin_btn_text_light_disabled"
                android:padding="5dp"
                android:text="@string/stats_authors"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/author_chart"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/common_google_signin_btn_text_light_disabled"
                android:padding="5dp"
                android:text="@string/stats_categories"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/category_chart"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/white" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>